--- a/Q12.md
+++ b/Q12.md
@@ -1,6 +1,10 @@
-### Ans: 
+## **Ans:**
 
-### 實名會員 v.s. 非實名會員的權利
+### 使用者經註冊成功後，即可以享有臺北卡基本服務，但若想要使用臺北卡進階服務，則須進行會員實名認證。以下分別列出非實名會員及實名會員各自享有的權利:
+
+| 服務名稱 | 非實名會員 | 實名會員 |
+| :--- | :---: | :---: |
+| 會員中心網站/**會員資料維護** |  | Ⅴ |
 
 
 
