--- a/Q12.md
+++ b/Q12.md
@@ -1,10 +1,16 @@
 ## **Ans:**
 
-### 使用者經註冊成功後，即可以享有臺北卡基本服務，但若想要使用臺北卡進階服務，則須進行會員實名認證。以下分別列出非實名會員及實名會員各自享有的權利:
+### 使用者經註冊成功後，即可以享有臺北卡基本服務，但若想要使用臺北卡進階服務，則須進行會員實名認證。以下分別列出非實名會員及實名會員在會員中心網站及市民虛擬卡應用程式各自享有的權利:
 
 | 服務名稱 | 非實名會員 | 實名會員 |
 | :--- | :---: | :---: |
-| **會員中心網站/會員資料維護** |  | Ⅴ |
+| **會員中心/會員資料維護** | Ⅴ | Ⅴ |
+| 會員中心/朋友資料維護 |  |  |
+| 會員中心/聯絡人資料維護 |  |  |
+| 會員中心/電子證劵\(悠遊卡\)管理 |  |  |
+|  |  |  |
+|  |  |  |
+|  |  |  |
 
 
 
