--- a/Q12.md
+++ b/Q12.md
@@ -13,6 +13,12 @@
 | **會員中心/虛擬卡** | Ⅴ | Ⅴ |
 | **會員中心/網路市民點數查詢** | 須通過網路市民授權認證 | 須透過網路市民授權認證 |
 | **會員中心/第三方應用授權** | Ⅴ | Ⅴ |
+| **市民虛擬卡應用程式/臺北卡** |  |  |
+| 市民虛擬卡應用程式/會員中心/電子發票 |  |  |
+|  |  |  |
+|  |  |  |
+|  |  |  |
+|  |  |  |
 
 
 
