--- a/Q12.md
+++ b/Q12.md
@@ -20,6 +20,7 @@
 | **市民虛擬卡/會員中心/臺北卡紅利** |  | Ⅴ |
 | **市民虛擬卡/會員中心/帳號資訊** | Ⅴ | Ⅴ |
 | **市民虛擬卡/會員中心/變更密碼** | Ⅴ | Ⅴ |
+| **市民虛擬卡/朋友資料維護** | Ⅴ | Ⅴ |
 
 
 
