--- a/Q13.md
+++ b/Q13.md
@@ -1,26 +1,14 @@
 ### Ans: 使用者成為實名會員的方式有二種:
 
-###   1.線上作業 :非實名會員升級為實名會員 --
+### 1.線上作業 :非實名會員升級為實名會員 --
 
-###          step1 使用者透過線上認證\(手機認證、電子郵件認證、社群認證\)註冊成為非實名
+### step1 使用者透過線上認證\(手機認證、電子郵件認證、社群認證\)註冊成為非實名會員。
 
-###                     會員。
+### step2 使用者以非實名會員身分登入系統，在個人資料維護功能裡，點擊 \[實名認證\] ，透過 自然人憑證認證成功來升級成實名會員。
 
-###          step2 使用者以非實名會員身分登入系統，在個人資料維護功能裡，點擊 \[實名認
+### 2.線下作業: 透過臨櫃服務人員協助,註冊成為實名會員
 
-###                     證\] ，透過 自然人憑證認證成功來升級成實名會員。
-
-### 
-
-###   2.線下作業: 透過臨櫃服務人員協助,註冊成為實名會員
-
-###                         -- 使用者到各戶政事務所，提供相關文件證明，透過臨櫃服務人員協助申
-
-###                             請註冊為實名會員。  
-
-
-
-
+### -- 使用者到各戶政事務所，提供相關文件證明，透過臨櫃服務人員協助申請註冊為實名會員。
 
 
 
