--- a/Q13.md
+++ b/Q13.md
@@ -12,3 +12,11 @@
 
 ### -- 使用者到各戶政事務所，提供相關文件證明，透過臨櫃服務人員協助申請註冊為實名會員。
 
+
+
+---
+
+#### 請參考  [臺北卡會員中心操作手冊 /會員資料維護/個人資料](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e09-hui-yuan-zi-liao-wei-hu/4e0029-ge-ren-zi-xun.html)
+
+
+
