--- a/Q14.md
+++ b/Q14.md
@@ -1,2 +1,10 @@
-this is the answer for Q14
+## Ans:
+
+### 會員忘記帳號 或密碼時， 可透過忘記 帳號/密碼功能 ，重新取得帳號 / 密碼 。
+
+---
+
+#### [請參考   臺北卡會員中心操作手冊 /二登入登出 / \(一\)登入系統](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e8c-deng-ru-deng-chu/4e0029-deng-ru-xi-tong.html)
+
+
 
