--- a/Q14.md
+++ b/Q14.md
@@ -4,7 +4,7 @@
 
 ---
 
-#### [請參考   臺北卡會員中心操作手冊 /二登入登出 / \(一\)登入系統](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e8c-deng-ru-deng-chu/4e0029-deng-ru-xi-tong.html)
+#### 請參考   [臺北卡會員中心操作手冊 /二登入登出 / \(一\)登入系統/ 2.忘記帳號密碼](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e8c-deng-ru-deng-chu/4e0029-deng-ru-xi-tong.html)
 
 
 
