--- a/Q15.md
+++ b/Q15.md
@@ -1,2 +1,10 @@
-this is answer for Q15
+## Ans:
+
+### 若欲享有多卡消費， 單一帳號查詢的悠遊卡管理服務， 則須
+
+### Step1. 要將欲使用之悠遊卡在會員中心網站或市民虛擬卡應用程式裡進行綁定
+
+### Step2. 用悠遊卡消費時要告訴店員不要列印電子發票，即將消費交易儲存在悠遊卡載具裡。
+
+
 
