--- a/Q15.md
+++ b/Q15.md
@@ -1,6 +1,6 @@
 ## Ans:
 
-### 若欲享有多卡消費， 單一帳號查詢的悠遊卡管理服務， 則須
+### 若欲享有多卡消費， 單一帳號查詢的悠遊卡管理服務及自動兌獎功能， 則須
 
 ### Step1. 要將欲使用之悠遊卡在會員中心網站或市民虛擬卡應用程式裡進行綁定
 
