--- a/Q13.md
+++ b/Q13.md
@@ -14,7 +14,7 @@
 
 ---
 
-#### 請參考  [臺北卡會員中心操作手冊 /會員資料維護/個人資料](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e09-hui-yuan-zi-liao-wei-hu/4e0029-ge-ren-zi-xun.html)
+#### 請參考  [臺北卡會員中心操作手冊 /會員資料維護/個人資料\_Step6實名認證](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e09-hui-yuan-zi-liao-wei-hu/4e0029-ge-ren-zi-xun.html)
 
 
 
