--- a/Q15.md
+++ b/Q15.md
@@ -2,13 +2,13 @@
 
 ### 若欲享有多卡消費， 單一帳號查詢的悠遊卡管理服務及自動兌獎功能， 則須
 
-### Step1. 要將欲使用之悠遊卡在會員中心網站或市民虛擬卡應用程式裡進行綁定
+#### Step1. 要將欲使用之悠遊卡在會員中心網站或市民虛擬卡應用程式裡進行綁定
 
-### Step2. 用悠遊卡消費時要告訴店員不要列印電子發票，即將消費交易儲存在悠遊卡載具裡。
+#### Step2. 用悠遊卡消費時要告訴店員不要列印電子發票，即將消費交易儲存在悠遊卡載具裡。
 
----
+####  
 
-#### 請參考  [ ](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/516d-dian-zi-piao-zheng-guan-li/4e0029-you-you-qia-guan-li.html)
+### 請參考  [ ](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/516d-dian-zi-piao-zheng-guan-li/4e0029-you-you-qia-guan-li.html)
 
 #### [臺北卡會員中心操作手冊 /六、**電子票證管理**](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/516d-dian-zi-piao-zheng-guan-li/4e0029-you-you-qia-guan-li.html)
 
