--- a/Q15.md
+++ b/Q15.md
@@ -6,13 +6,13 @@
 
 #### Step2. 用悠遊卡消費時要告訴店員不要列印電子發票，即將消費交易儲存在悠遊卡載具裡。
 
-####  
+#### 
 
 ### 請參考  [ ](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/516d-dian-zi-piao-zheng-guan-li/4e0029-you-you-qia-guan-li.html)
 
 #### [臺北卡會員中心操作手冊 /六、**電子票證管理**](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/516d-dian-zi-piao-zheng-guan-li/4e0029-you-you-qia-guan-li.html)
 
-#### [市民虛擬卡應用程式操作手冊/ 四、會員中心/\(三\)電子發票](https://www.gitbook.com/book/jrsysangela/taipeicard30app/edit#/edit/master/chapter2/56db-peng-you/4e0929-xia-zai-vcard.md?_k=gm91vw)
+#### [市民虛擬卡應用程式操作手冊/ 四、會員中心/\(三\)電子發票](https://jrsysangela.gitbooks.io/taipeicard30app/content/chapter2/56db-peng-you/4e0929-xia-zai-vcard.html)
 
 #### 
 
