--- a/Q22.md
+++ b/Q22.md
@@ -1,2 +1,18 @@
-this is answer for Q22
+## Ans:
+
+### 實名會員若認為臺北卡功能中的卡證服務清單過於冗長, 或因其他原因想要隱藏某些卡證服務，可至
+
+> ### 臺北卡會員中心網站--&gt;服務管理--&gt;針對要隱藏的卡證服務 \[取消綁定\]
+
+### 則在手機市民虛擬卡應用程式中的\[臺北卡\]功能中, 將隱藏此指定卡證服務資訊。
+
+---
+
+### 請參考
+
+####                   [臺北卡會員中心操作手冊 /七、服務管理](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e03-fu-wu-guan-li.html)
+
+####                   
+
+
 
