--- a/Q22.md
+++ b/Q22.md
@@ -4,7 +4,7 @@
 
 > ### 臺北卡會員中心網站--&gt;服務管理--&gt;針對要隱藏的卡證服務 \[取消綁定\]
 
-### 則在手機市民虛擬卡應用程式中的\[臺北卡\]功能中, 將隱藏此指定卡證服務資訊。
+### 則在市民虛擬卡應用程式中的\[臺北卡\]功能中, 將隱藏此指定卡證服務資訊。
 
 ---
 
@@ -13,8 +13,6 @@
 #### [臺北卡會員中心操作手冊 /七、服務管理](https://jrsysangela.gitbooks.io/taipeicard30/content/chapter2/4e03-fu-wu-guan-li.html)
 
 #### [市民虛擬卡應用程式操作手冊/ 三、臺北卡/\(三\)卡證整合管理](https://jrsysangela.gitbooks.io/taipeicard30app/content/chapter2/4e09-hui-yuan-zi-liao-wei-hu/4e0929-qia-zheng-zheng-he-guan-li.html)
-
-
 
 
 
